<?xml version="1.0" encoding="UTF-8"?>
<!--
	Copyright (C) 2010 Manuel Luitz
-->
<!--
	This file is part of AndroHid. This program is free software; you can
	redistribute it and/or modify it under the terms of the GNU General
	Public License as published by the Free Software Foundation; either
	version 3 of the License, or (at your option) any later version.
-->
<!--
	This program is distributed in the hope that it will be useful, but
	WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
	General Public License for more details. You should have received a
	copy of the GNU General Public License along with this program; If
	not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item	android:title="@string/menu_button_settings" 
			android:id="@+id/PREFERENCES"
			android:icon="@android:drawable/ic_menu_preferences" />
	<item	android:title="@string/menu_button_search_device" 
			android:id="@+id/SEARCH_DEVICE"
			android:icon="@android:drawable/ic_menu_search" />
    <item	android:title="@string/menu_button_info" 
			android:id="@+id/INFO"
			android:icon="@android:drawable/ic_menu_info_details" />
	<item	android:title="@string/menu_button_connect" 
			android:id="@+id/CONNECT"
			android:icon="@android:drawable/ic_menu_directions" />
	<item	android:title="@string/menu_button_disconnect"
			android:id="@+id/DISCONNECT"
			android:icon="@android:drawable/ic_menu_close_clear_cancel" />
			
</menu>